--- a/css/style.css
+++ b/css/style.css
@@ -287,10 +287,10 @@ aside ul li:hover{
 
 /* -- Contact Page -- */
 #sectContact{
-    color: black;
-    padding: 3em;
+    padding: 2em;
     width: 20%;
-    border: 4px solid #1c1d1f;
+    border: 4px solid white;
+    box-shadow: 0px 0px 4px black;
 }
 #sectContact article{
     height: auto;
@@ -302,21 +302,32 @@ aside ul li:hover{
 }
 #sectContact h1{
     padding-bottom: 1em;
+    color: white;
+    text-shadow: 1px 1px 4px black;
 }
 #sectContact article p{
     color: black;
     padding: 0.2em;
+    color: white;
+    text-shadow: 1px 1px 4px black;
 }
 #sectContact article a{
     text-decoration: none;
-    color: black;
     font-weight: bolder;
     margin-left: 0.1em;
+    color: white;
+    text-shadow: 1px 1px 4px black;
 }
 #sectContact article a:hover{
     text-decoration: underline;
 }
-
+#figContact{
+    width: 100%;
+    margin-top: 2em;
+}
+#figContact img{
+    width: 30%;
+}
 
 /* --- Responsive --- */
 @media all and (max-width: 600px){
@@ -434,7 +445,7 @@ aside ul li:hover{
 
     /* Contact Page */
     #sectContact{
-        width: 50%;
+        width: 70%;
     }
     #sectContact article p{
         display: flex;
@@ -449,6 +460,9 @@ aside ul li:hover{
     #abrir, #cerrarMenu, #logoMob{
         display: none;
     }
+    #sectContact{
+        width: 60%;
+    }
 }
 
 @media all and (min-width: 1500px){
@@ -458,8 +472,4 @@ aside ul li:hover{
     #abrir, #cerrarMenu, #logoMob{
         display: none;
     }
-}
-
-#aContact{
-    border: 2px solid red;
 }
