--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 html{
     background-size: cover;
     background-position: center;
-    background: url(../img/fondo.png), linear-gradient(to left, #444444, #777777)
+    background: url(../img/fondo.png), linear-gradient(45deg, #002727, #002e2e);
+    height: 100vh;
 }
 body{
     font-family: quicksand;
@@ -88,8 +89,8 @@ li a:hover{
     text-decoration: none;
     color: #00ffff;
     font-size: 1.5em;
-    border: #00ffff 2px solid;
-    background-color: #fff;
+    border: #00ffff 4px solid;
+    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 1000px;
     padding: 0.2em;
     padding-left: 0.5em;
@@ -98,7 +99,6 @@ li a:hover{
     bottom: 5%;
     right: 2%;
     display: none;
-    opacity: 50%;
 }
 .liMain{
     color: black;
@@ -219,6 +219,7 @@ aside{
     width: auto;
     background-color: #1c1d1f;
     color: white;
+    height: 100%;
 }
 aside ul{
     display: flex;
@@ -241,7 +242,7 @@ aside ul li:hover{
     background-color: transparent;
     margin:0;
     padding:1em;
-    color: black;
+    color: white;
     font-weight: bolder;
     letter-spacing: 2px;
     font-size: 2em;
@@ -288,7 +289,7 @@ aside ul li:hover{
 /* -- Contact Page -- */
 #sectContact{
     padding: 2em;
-    width: 20%;
+    width: 30%;
     border: 4px solid white;
     box-shadow: 0px 0px 4px black;
 }
@@ -472,5 +473,8 @@ aside ul li:hover{
     }
     #abrir, #cerrarMenu, #logoMob{
         display: none;
+    }
+    #sectContact{
+        width: 30%;
     }
 }
