--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ nav{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     background-color: white;
     border-radius: 100px 0px 0px 100px;
     margin-left: auto;
