--- a/css/style.css
+++ b/css/style.css
@@ -1,569 +1,1 @@
-*{
-    margin: 0;
-    padding: 0;
-    border: 0;
-}
-html{
-    background: url(../img/fondo.png),linear-gradient(30deg,#662e91,#2e3897);
-    height: 100vh;
-}
-body{
-    font-family: quicksand;
-
-}
-#bodyMain{
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-/* Nav Bar */
-header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    position: fixed;
-    z-index: 3;
-}
-nav{
-    padding-right: 2em;
-    padding-left: 2em;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    border-radius: 100px 0px 0px 100px;
-    margin-left: auto;
-}
-#logoLink{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-}
-#ulMenu{
-    display: flex;
-    flex-direction: row;
-    border-radius: 100px 0px 0px 100px;
-}
-#ulMenu li{
-    list-style: none;
-    padding: 0.8em;
-    margin: 0.2em;
-    font-weight: 600;
-}
-#ulMenu li:hover{
-    text-decoration: underline;
-}
-#ulMenu li a{
-    text-decoration: none;
-    color: black;
-}
-#logo{
-    display: flex;
-    justify-content: center;
-}
-#logo img{
-    width: 25%;
-}
-
-/* Home Page */
-main{
-    padding-top: 5%;
-    display: flex;
-    flex-direction: row;
-    height: 80vh;
-}
-#presentacion{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 40%;
-}
-#presentacion figure{
-    width: 100%;
-    margin-top: 1em;
-}
-figure img{
-    width: 12%;
-    margin: 0.2em;
-}
-#mainVentanas{
-    width: 56.6%;
-    height: 68%;
-    padding: 1em;
-    display: flex;
-    flex-direction: row;  
-    opacity: 75%;
-    position: relative;
-    user-select: none;
-    cursor: pointer;
-}
-.cuadros{
-    width: 100%;
-    margin: 1em;
-    box-shadow: 0px 0px 3px black;
-    border-radius: 20px;
-    position: absolute;
-    transform: rotateY(-20deg) rotateX(20deg);
-    backdrop-filter: blur(20px);
-    transform-origin: left bottom;
-    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
-}
-.cuadros img{
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-}
-h1{
-    color: white;
-    font-size: 3em;
-}
-h2{
-    color: white;
-    font-size: 6em;
-}
-p{
-    color: white;
-    font-size: 1.5em;
-    font-weight: 400;
-    padding-left: 1.2em;
-    padding-right: 1.2em;
-    text-align: center;
-}
-#c1{
-    width: 200px;
-    height: 200px; 
-    left: 20;
-    top:0;
-}
-#c2{
-    width: 200px;
-    height: 200px;
-    top:0;
-    left: 300px;
-}
-#c3{
-    width: 900px;
-    height: 500px;   
-    top: 50px;
-    left: 100px;
-}
-#c4{
-    width: 500px;
-    height: 300px;   
-    top: 300px;
-    left: 70px;
-}
-#c5{
-    width: 500px;
-    height: 300px;   
-    top: 330px;
-    left: 500px;
-}
-/* Efecto Cuadro */
-.efectoCuadro{
-    position: relative;
-    cursor: pointer;
-}   
-.efectoCuadro section{
-    padding: 4em;
-}     
-section.efectoCuadro section::before,
-section.efectoCuadro section::after {
-    position: absolute;
-    content: '';
-    opacity: 0;
-}
-section.efectoCuadro section::before {
-    top: 50px;
-    right: 30px;
-    bottom: 50px;
-    left: 30px;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    -webkit-transform: scale(0,1);
-    transform: scale(0,1);
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-}
-section.efectoCuadro section::after {
-    top: 30px;
-    right: 50px;
-    bottom: 30px;
-    left: 50px;
-    border-right: 1px solid #fff;
-    border-left: 1px solid #fff;
-    -webkit-transform: scale(1,0);
-    transform: scale(1,0);
-    -webkit-transform-origin: 100% 0;
-    transform-origin: 100% 0;
-}
-section.efectoCuadro section::before,
-section.efectoCuadro section::after{
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-}
-section.efectoCuadro:hover section::before,
-section.efectoCuadro:hover section::after {
-    opacity: 1;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-}
-section.efectoCuadro:hover section::after{
-    -webkit-transition-delay: 0.15s;
-    transition-delay: 0.15s;
-}
-#sectionMain2{
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#sectionMain2 article{
-    width: 50%;
-    border: 1px solid white;
-    padding: 1em;
-}
-#sectionMain2 h1{
-    font-size: 3em;
-    color: white;
-}
-#sectionMain2 p{
-    font-size: 1.2em;
-    color: white;
-}
-#bton{
-    text-align: center;
-    text-decoration: none;
-    color: #2e3897;
-    border: 3px solid #2e3897;
-    font-size: 2.5em;
-    font-weight: bold;
-    background-color: white;
-    border-radius: 1000px;
-    padding: 0.1em;
-    padding-left: 0.48em;
-    padding-right: 0.48em;
-    position: fixed;
-    bottom: 5%;
-    right: 2%;
-    display: none;
-}
-/* Contacto */
-#mainContacto{
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-#sectContact {
-    padding: 2em;
-    width: 30%;
-    border: 1px solid white;
-    box-shadow: 0px 0px 4px black;
-}
-#sectContact h1{
-    font-size: 2em;
-    padding-bottom: 1em;
-    color: white;
-    text-shadow: 0px 0px 4px black;
-}
-#sectContact article{
-    height: auto;
-    width: auto;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-#sectContact article p{
-    padding: 0.2em;
-    color: white;
-    text-shadow: 0px 0px 4px black;
-}
-#sectContact article a{
-    text-decoration: none;
-    font-weight: bolder;
-    margin-left: 0.1em;
-    color: white;
-    text-shadow: 0px 0px 4px black;
-}
-#sectContact figure{
-    width: 100%;
-    margin-top: 2em;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-#sectContact figure img{
-    width: 30%;
-}
-
-/* Proyectos */
-#mainProyectos{
-    padding-left: 2em;
-    padding-right: 2em;
-}
-aside{
-    width: auto;
-    color: white;
-    height: auto;
-}
-aside ul{
-    display: flex;
-    flex-direction: column;
-}
-aside ul li{
-    padding: 0.5em;
-    list-style: none;
-    font-size: 1.2em;
-    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
-    cursor: pointer;
-}
-aside ul li:hover{
-    padding-left: 1em;
-}
-#art{
-    width: 87%;
-    height: 100%;
-    background-position-x: 50%;
-    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
-}
-#h2P{
-    text-align: center;
-    background-color: transparent;
-    margin:0;
-    color: white;
-    font-weight: bolder;
-    letter-spacing: 2px;
-    font-size: 2em;
-}
-#art article{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color:white;
-    background: none;
-}
-#art h2{
-    font-size: 3em;
-}
-#art p{
-    font-size: 1.5em;
-}
-#PL{
-    font-size: 1.2em;
-    margin-top: 2em;
-}
-#PT, #PD{
-    text-shadow: 0px 0px 4px black;
-}
-#PL a{
-    text-decoration: none;
-    padding: 0.2em;
-    color: white;
-    border: 1px solid white;
-    border-radius: 100px;
-    text-shadow: 0px 0px 4px black;
-}
-#PL a:hover{
-    color: #1ca591;
-    border: 1px solid #1ca591;
-}
-#cerrar{
-    width: 1.2em;
-    margin-top: 1em;
-    color:crimson;
-    font-weight: bolder;
-    font-size: 1.4em;
-    border-radius: 100px;
-    text-shadow: 0px 0px 4px black;
-    cursor: pointer;
-}
-
-/* Responsive */
-@media all and (max-width:1000px){
-    /* Header */
-    #logoLink{
-        display: none;
-    }
-    nav{
-        border-radius: 0;
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-    #ulMenu li{
-        margin: 0;
-    }
-    /* Home */
-    main{
-        padding-top: 20%;
-        flex-direction: column;
-        height: auto;
-        align-items: center;
-    }
-    #presentacion{
-        width: 100%;
-    }
-    .efectoCuadro{
-        width: 100%;
-    }
-    .efectoCuadro section{
-        padding: 0;
-    }
-    .efectoCuadro h1{
-        font-size: 2em;
-        text-align: center;
-    }
-    .efectoCuadro p{
-        font-size: 1em;
-    }
-    section.efectoCuadro section::before {
-        top: 0px;
-        right: 0px;
-        bottom: 0px;
-        left: 0px;
-    }
-    section.efectoCuadro section::after {
-        top: -10px;
-        right: 10px;
-        bottom: -10px;
-        left: 10px;
-    }
-    #mainVentanas{
-        width: 97%;
-        flex-direction: row;
-        flex-wrap: wrap;
-        padding: 0;
-    }
-    .cuadros{
-        position: initial;
-        padding: 0;
-        margin: 0.2em;
-        transform: rotate(0);
-    }
-    #c1{
-        width: 48%;
-        height: auto;
-    }
-    #c2{
-        width: 48%;
-        height: auto;
-    }
-    #c3{
-        width: 100%;
-        height: auto;
-    }
-    #c4{
-        width: 48%;
-        height: auto;
-    }
-    #c5{
-        width: 48%;
-        height: auto;
-    }
-    #sectionMain2 {
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    #sectionMain2 article{
-        width: 80%;
-        margin-top: 2em;
-    }
-    #sectionMain2 p{
-        padding: 0;
-    }
-    /* Projects Page */
-    aside{
-        padding-bottom: 1em;
-        padding-top:1em;
-        width: 100%;
-    }
-    #contenedor-menu{
-        text-align: center;
-    }
-    #mainProyectos {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    #h2P{
-        display: none;
-    }
-    #art {
-        height: 50vh;
-    }
-    #art h2 {
-        font-size: 2em;
-    }
-    #art p {
-        font-size: 1em;
-    }
-    /* Burguer Menu */
-    #contenedor-menu a{
-        color: white;
-        text-decoration: none;
-        font-weight: bolder;
-        font-size: 2em;
-    }
-    #h2P{
-        display: none;
-    }
-    #contenedor-menu #cerrarMenu{
-        display: none;
-    }
-    #contenedor-menu #contenedor-enlaces{
-        height:0;
-        transition: height 0.5s ease;
-        overflow: hidden;
-    }
-    #contenedor-menu:target #abrir{
-        display: none;
-    }
-    #contenedor-menu:target #cerrarMenu{
-        display: block;
-    }
-    #contenedor-menu:target #contenedor-enlaces{
-        height: 50vh;
-        transition: height 0.5s ease;
-    }
-    #contenedor-enlaces{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-
-    /* Projects view */
-    #art{
-        width: 100%;   
-    }
-
-    /* Contacto */
-    #sectContact {
-        width: 90%;
-        padding: 0;
-    }
-    #sectContact p{
-        font-size: 1em;
-    }
-}
-
-@media all and (min-width: 1000px){
-    aside{
-        width: 26%;
-    }
-    #abrir, #cerrarMenu, #logoMob{
-        display: none;
-    }
-}
+*{margin:0;padding:0;border:0}html{background:url(img/fondo.png),linear-gradient(30deg,#662e91,#2e3897);background-attachment:fixed}body{font-family:quicksand}#bodyMain{background-color:rgba(0,0,0,.3)}header{display:flex;flex-direction:row;align-items:center;width:100%;position:fixed;z-index:3}nav{padding-right:2em;padding-left:2em;display:flex;flex-direction:row;align-items:center;justify-content:center;background-color:#fff;border-radius:100px 0 0 100px;margin-left:auto}#logoLink{width:50%;display:flex;justify-content:center}#ulMenu{display:flex;flex-direction:row;border-radius:100px 0 0 100px}#ulMenu li{list-style:none;padding:.8em;margin:.2em;font-weight:600}#ulMenu li:hover{text-decoration:underline}#ulMenu li a{text-decoration:none;color:#000}#logo{display:flex;justify-content:center}#logo img{width:25%}main{padding-top:5%;display:flex;flex-direction:row;height:80vh}#presentacion{display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;width:40%}#presentacion figure{width:100%;margin-top:1em}figure img{width:12%;margin:.2em}#mainVentanas{width:56.6%;height:68%;padding:1em;display:flex;flex-direction:row;opacity:75%;position:relative;user-select:none;cursor:default}.cuadros{width:100%;margin:1em;box-shadow:0 0 3px #000;border-radius:20px;position:absolute;transform:rotateY(-20deg) rotateX(20deg);backdrop-filter:blur(20px);transform-origin:left bottom;transition:all 1s cubic-bezier(.075,.82,.165,1) 0s}.cuadros img{width:100%;height:100%;border-radius:20px}h1{color:#fff;font-size:3em}h2{color:#fff;font-size:6em}p{color:#fff;font-size:1.5em;font-weight:400;padding-left:1.2em;padding-right:1.2em;text-align:center}#c1{width:200px;height:200px;left:20;top:0}#c2{width:200px;height:200px;top:0;left:300px}#c3{width:900px;height:500px;top:50px;left:100px}#c4{width:500px;height:300px;top:300px;left:70px}#c5{width:500px;height:300px;top:330px;left:500px}.efectoCuadro{position:relative;cursor:default}.efectoCuadro section{padding:4em}section.efectoCuadro section::after,section.efectoCuadro section::before{position:absolute;content:'';opacity:0}section.efectoCuadro section::before{top:50px;right:30px;bottom:50px;left:30px;border-top:1px solid #fff;border-bottom:1px solid #fff;-webkit-transform:scale(0,1);transform:scale(0,1);-webkit-transform-origin:0 0;transform-origin:0 0}section.efectoCuadro section::after{top:30px;right:50px;bottom:30px;left:50px;border-right:1px solid #fff;border-left:1px solid #fff;-webkit-transform:scale(1,0);transform:scale(1,0);-webkit-transform-origin:100% 0;transform-origin:100% 0}section.efectoCuadro section::after,section.efectoCuadro section::before{-webkit-transition:opacity .35s,-webkit-transform .35s;transition:opacity .35s,transform .35s}section.efectoCuadro:hover section::after,section.efectoCuadro:hover section::before{opacity:1;-webkit-transform:scale(1);transform:scale(1)}section.efectoCuadro:hover section::after{-webkit-transition-delay:.15s;transition-delay:.15s}#sectionMain2{height:50vh;display:flex;flex-direction:column;justify-content:center;align-items:center}#sectionMain2 article{width:50%;border:1px solid #fff;padding:1em}#sectionMain2 h1{font-size:3em;color:#fff}#sectionMain2 p{font-size:1.2em;color:#fff}#bton{text-align:center;text-decoration:none;color:#2e3897;border:3px solid #2e3897;font-size:2.5em;font-weight:700;background-color:#fff;border-radius:1000px;padding:.1em;padding-left:.48em;padding-right:.48em;position:fixed;bottom:5%;right:2%;display:none}#mainContacto{width:100vw;display:flex;flex-direction:row;align-items:center;justify-content:center}#sectContact{padding:2em;width:30%;border:1px solid #fff;box-shadow:0 0 4px #000}#sectContact h1{font-size:2em;padding-bottom:1em;color:#fff;text-shadow:0 0 4px #000}#sectContact article{height:auto;width:auto;text-align:left;display:flex;flex-direction:column;align-items:flex-start}#sectContact article p{padding:.2em;color:#fff;text-shadow:0 0 4px #000}#sectContact article a{text-decoration:none;font-weight:bolder;margin-left:.1em;color:#fff;text-shadow:0 0 4px #000}#sectContact figure{width:100%;margin-top:2em;display:flex;flex-direction:row;justify-content:center;align-items:center}#sectContact figure img{width:30%}#mainProyectos{padding-left:2em;padding-right:2em}aside{width:auto;color:#fff;height:auto}aside ul{display:flex;flex-direction:column}aside ul li{padding:.5em;list-style:none;font-size:1.2em;transition:all 1s cubic-bezier(.075,.82,.165,1) 0s;cursor:pointer}aside ul li:hover{padding-left:1em}#art{width:87%;height:100%;background-position-x:50%;transition:all 1s cubic-bezier(.075,.82,.165,1) 0s}#h2P{text-align:center;background-color:transparent;margin:0;color:#fff;font-weight:bolder;letter-spacing:2px;font-size:2em}#art article{width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;color:#fff;background:0 0}#art h2{font-size:3em}#art p{font-size:1.5em}#PL{font-size:1.2em;margin-top:2em}#PD,#PT{text-shadow:0 0 4px #000}#PL a{text-decoration:none;padding:.2em;color:#fff;border:1px solid #fff;border-radius:100px;text-shadow:0 0 4px #000}#PL a:hover{color:#1ca591;border:1px solid #1ca591}#cerrar{width:1.2em;margin-top:1em;color:#dc143c;font-weight:bolder;font-size:1.4em;border-radius:100px;text-shadow:0 0 4px #000;cursor:pointer}@media all and (max-width:1000px){#logoLink{display:none}nav{border-radius:0;width:100%;padding:0;margin:0}#ulMenu li{margin:0}main{padding-top:15%;flex-direction:column;height:auto;align-items:center}#presentacion{width:100%}.efectoCuadro{width:100%}.efectoCuadro section{padding:0}.efectoCuadro h1{font-size:2em;text-align:center}.efectoCuadro p{font-size:1em}section.efectoCuadro section::before{top:0;right:0;bottom:0;left:0}section.efectoCuadro section::after{top:-10px;right:10px;bottom:-10px;left:10px}#mainVentanas{width:97%;flex-direction:row;flex-wrap:wrap;padding:0}.cuadros{position:initial;padding:0;margin:.2em;transform:rotate(0)}#c1{width:48%;height:auto}#c2{width:48%;height:auto}#c3{width:100%;height:auto}#c4{width:48%;height:auto}#c5{width:48%;height:auto}#sectionMain2{height:auto;display:flex;flex-direction:column;justify-content:center;align-items:center}#sectionMain2 article{width:80%;margin-top:2em}#sectionMain2 p{padding:0}aside{padding-bottom:1em;width:100%}#contenedor-menu{text-align:center}#mainProyectos{padding-left:0;padding-right:0}#h2P,#pP{display:none}#art{height:50vh}#art h2{font-size:2em}#art p{font-size:1em}#contenedor-menu a{color:#fff;text-decoration:none;font-weight:bolder;font-size:2em}#contenedor-menu #cerrarMenu{display:none}#contenedor-menu #contenedor-enlaces{height:0;transition:height .5s ease;overflow:hidden}#contenedor-menu:target #abrir{display:none}#contenedor-menu:target #cerrarMenu{display:block}#contenedor-menu:target #contenedor-enlaces{height:50vh;transition:height .5s ease;overflow-y:scroll}#contenedor-enlaces{display:flex;flex-direction:column;width:100%}#art{width:100%}#sectContact{width:90%;padding:0}#sectContact p{font-size:1em}}@media all and (min-width:1000px){aside{width:26%}#abrir,#cerrarMenu,#logoMob{display:none}}
