--- a/Proyectos/Generador de gradientes/style.css
+++ b/Proyectos/Generador de gradientes/style.css
@@ -108,6 +108,8 @@ button:hover{
     }
     main{
         width:90%;
+        padding: 0;
+        margin-top: 2em;
     }
     section{
         width: 100%;
